# sast-ai-workflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  test-requirements.txt
.github/workflows/: aiq-migration-pr-check.yml  aiq-unit-tests.yml  build-dev-image.yml  build-release-image.yml  require-feature-pr.yml  sonarcloud.yml
config/: default_config.yaml
deploy/: Makefile  README.md  deploy.md
deploy/argocd/: argocd-application.yaml
deploy/scripts/: README.md  generate_prompts.py
deploy/tekton/: pipeline.yaml  prompts-config-map.yaml
docs/: setup.md
src/: ExcelWriter.py  LLMService.py  MainProcess.py  MetricHandler.py  ReportReader.py  __init__.py  run.py
src/Utils/: config_utils.py  embedding_utils.py  file_utils.py  llm_utils.py  metrics_utils.py  output_utils.py  repo_utils.py  utils.py  validation_utils.py  vulnerability_stratified_split.py  workflow_utils.py
src/common/: config.py  constants.py
src/dto/: Issue.py  LLMResponse.py  ResponseStructures.py  SASTWorkflowModels.py
src/handlers/: c_repo_handler.py  llm_client_factory.py  protocols.py
src/sast_agent_workflow/: README.md  (+3 more)
tests/: conftest.py  test_capture_known_issues.py  test_evaluate_datasets.py  test_evaluation_summary.py  test_extract_missing_functions_or_macros.py  test_filter_items_for_evaluation.py  test_get_human_verified_results.py  test_get_source_code_blocks_from_error_trace.py  test_investigate_issue.py  test_read_sast_report.py  test_write_to_excel_file.py
(+60 files in other folders)
