[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
# Must be present (although empty) to activat   e auto-versioning

[project]
name = "sast_agent_workflow"
dynamic = ["version", "dependencies"]
requires-python = ">=3.13"
description = "SAST AI Workflow - NeMo Agent for Static Application Security Testing"
classifiers = ["Programming Language :: Python"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.entry-points.'aiq.components']
sast_agent_workflow = "sast_agent_workflow.register"

[project.scripts]
sast_agent_workflow = "run:main" 
